fix: status codes in handlers & swagger update
